# learnGitBranching

./: CHANGELOG.md  Dockerfile  FrontDockerfile  README.md  docker-compose.yml  package-lock.json  package.json
config/: nginx.conf
lti_auth/: .env  .env.example  Dockerfile  PythonDockerfile  README.md  docker-compose.yml  locust_testing.py  pyproject.toml  requirements.txt
lti_auth/app/main/checks_config/: parser.py
lti_auth/config/: nginx.conf
lti_auth/playground/md_parser/: example.md
lti_auth/src/lti_auth/: app.py
lti_auth/src/lti_auth/controllers/: lti.py  send_score.py  send_stat.py
lti_auth/src/lti_auth/entities/domain/: jwt_token_payload.py  pass_back_params.py  user.py
lti_auth/src/lti_auth/entities/web/: get_user_info.py  lti.py  send_mark.py  send_stat.py
lti_auth/src/lti_auth/enums/db/: stat_event_type.py
lti_auth/src/lti_auth/enums/web/: lti_role.py  request_method.py
lti_auth/src/lti_auth/exceptions/: base_api_error.py
lti_auth/src/lti_auth/repositories/db_repositories/: lti_sessions.py  stat_events.py  users.py
lti_auth/src/lti_auth/serializers/: bad_request_data.py  events.py  jwt_token_payload.py  pass_back_params.py  session_info.py  user.py
lti_auth/src/lti_auth/services/: __init__.py  js_tasks_integration.py  lti_auth.py  lti_marks.py  lti_request_validator.py  sessions.py  stat_events.py  users.py
lti_auth/src/lti_auth/settings/: settings.py
lti_auth/src/lti_auth/utils/: dataclass_as_fast_api_form.py  types.py
lti_auth/src/lti_auth/value_objects/: session_info.py  task_redirect_query_params.py  url_components.py
(+100 files in other folders)
