[tool.poetry]
name = "lti-auth"
version = "0.1.0"
description = ""
authors = ["MihailPereverza <mihailpereverza@yandex.ru>"]
readme = "README.md"

[tool.ruff]
# Set the maximum line length
line-length = 120

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
motor = "^3.3.2"
serpyco-rs = "^1.2.0"
lti = "^0.9.5"
nest-asyncio = "^1.6.0"
orjson = "^3.10.0"
pyjwt = "^2.8.0"
starlette = "^0.37.2"
python-multipart = "^0.0.9"
oauthlib = "^3.2.2"

[tool.poetry.dev-dependencies]
mypy = "^1.9.0"
mypy-extensions = "^1.0.0"
ruff = "^0.3.2"
deptry = "^0.16.1"

[tool.deptry.per_rule_ignores]
DEP002 = ['python-multipart']

[build-system]
requires = ["poetry-core"]  # игнорим, т.к. необходим для fast-api
build-backend = "poetry.core.masonry.api"
